# lcfilter

./: .gitignore  .logcatignore  .logcatscope  README.md  pyproject.toml
src/lcfilter/: __init__.py  cli.py  config_ignore.py  config_scope.py  filter_engine.py  models.py  parser_logcat.py  stream_router.py
tests/: __init__.py  test_config_ignore.py  test_config_scope.py  test_filter_engine.py  test_parser_logcat.py  test_stream_router.py
