[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcfilter"
version = "0.1.0"
description = "Filtered Android logcat viewing with scope-aware protection using .logcatignore and .logcatscope config files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dan Shields", email = "d4nshields@users.noreply.github.com" }
]
keywords = ["android", "adb", "logcat", "filter", "debug"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
lcfilter = "lcfilter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lcfilter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
